<resources>
    <string name="app_name">My Diary</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!--cho Navigation Drawer-->
    <string name="navigation_drawer_open_thunghiem">open</string>
    <string name="navigation_drawer_close_thunghiem">close</string>
    <string name="navigation_drawer_title">My Diary</string>
    <string name="navigation_drawer_email">Nguyễn Đông Hải@gmail.com</string>
    <string name="navigation_drawer_applock">Set lock code</string>
    <string name="navigation_drawer_about">About</string>

    <string name="menu_add">Done</string>
    <string name="menu_find">Find</string>
    <string name="menu_sort">Sort</string>

    <!--cho Dialog Find -->
    <string name="menu_find_title">Please Enter</string>
    <string name="menu_find_phainhapdu">Must Enter Enough</string>
    <string name="menu_find_phainhapso">Must Enter Number</string>
    <string name="menu_find_day">Day</string>
    <string name="menu_find_month">Month</string>
    <string name="menu_find_year">Year</string>

    <!--cho màn hìnhEditOrAdd Page -->
    <string name="fragment_add_textoption_style_normal">Normal</string>
    <string name="fragment_add_textoption_style_bold">Bold</string>
    <string name="fragment_add_textoption_style_italic">Italic</string>
    <string name="fragment_add_textoption_style_bold_italic">Bold Italic</string>
    <string name="fragment_add_textoption_position_left">Left Position</string>
    <string name="fragment_add_textoption_position_right">Right Position</string>
    <string name="fragment_add_textoption_position_center">Center Position</string>
    <string name="fragment_add_textoption_position_top">Top Position</string>
    <string name="fragment_add_textoption_position_bottom">Bottom Position</string>
    <string name="fragment_add_textoption_position_left_center">Left Center Position</string>
    <string name="fragment_add_textoption_position_left_top">Left Top Position</string>
    <string name="fragment_add_textoption_position_left_bottom">Left Bottom Position</string>
    <string name="fragment_add_textoption_position_right_center">Right Center Position</string>
    <string name="fragment_add_textoption_position_right_top">Right Top Position</string>
    <string name="fragment_add_textoption_position_right_bottom">Right Bottom Position</string>
    <string name="fragment_add_adding">Page Diary Added</string>
    <string name="fragment_add_edting">Page Diary Edited</string>

    <!--cho Thông báo xóa Diary-->
    <string name="fragment_listpage_delete_attention">Attention</string>
    <string name="fragment_listpage_delete_content">Are you sure you want to delete this diary ?</string>
    <string name="fragment_listpage_delete_cancel">Cancel</string>
    <string name="fragment_listpage_delete_yes">Yes</string>

    <string name="firebase_account_weakpass">At least 6 characters</string>
    <string name="aboue_forfun">Above content is loading from a JSON google sheet. \n
                                Just for fun :)).</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--cho About Activity-->
    <string name="activity_about2_title">App Diary</string>
    <string name="activity_about2_content">This App is made by Nguyen Dong Hai</string>

    <!--cho Activity Set App Lock-->
    <string name="activity_app_lock_setapplock">App Lock</string>
    <string name="activity_app_lock_hint">Enter key</string>
    <string name="activity_app_lock_hint_2">Enter Email (For forgotten key)</string>
    <string name="activity_app_lock_set_key">Set Key</string>
    <string name="activity_app_lock_delete_key">Delete Key</string>
    <string name="activity_app_lock_sign_up_error">Set Key Error. Please connect to Internet, we have to sent your new info to our server</string>
    <string name="activity_app_lock_sign_up_error_weakpass">Key is not strong enough (Atleast 6 characters)</string>
    <string name="activity_app_lock_sign_up_error_emailwrong">Email address is malformed</string>
    <string name="activity_app_lock_sign_up_error_emailexist">Email address exist</string>
    <string name="activity_app_lock_sign_in_error">Error, please try again</string>
    <string name="activity_app_lock_success">Success</string>
    <string name="activity_app_lock_no_key_delete">You have no key to delete</string>
    <string name="activity_app_lock_must_enter">Must enter Email and Key</string>
    <string name="activity_app_lock_delete_key_areyousure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--cho Activity Load App Lock-->
    <string name="activity_load_app_lock_title">Please Enter Key</string>
    <string name="activity_load_app_lock_hint">Enter key here</string>
    <string name="activity_load_app_lock_enter">Enter</string>
    <string name="activity_load_app_lock_forgotpassword"><u>Forgot Key ?</u></string>
    <string name="activity_load_app_lock_toast">Wrong Password</string>
    <string name="activity_load_app_lock_emailsent">Email sent. This app will be closing. You should close this app in multitasking</string>
    <string name="activity_load_app_lock_connectwifi">Please connect wifi or 3G/4G for this reset key</string>

</resources>
